{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 23,
  "lineage": "8f143776-afa3-2850-a859-fb9f0439543a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797923187401:internet-gateway/igw-045db3e13f4b17590",
            "id": "igw-045db3e13f4b17590",
            "owner_id": "797923187401",
            "region": "us-east-2",
            "tags": {
              "Name": "lab1-igw"
            },
            "tags_all": {
              "Name": "lab1-igw"
            },
            "vpc_id": "vpc-0ccb77312cb26b790"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab1_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:797923187401:loadbalancer/app/lab1-alb/f534fe36ced76f2e",
            "arn_suffix": "app/lab1-alb/f534fe36ced76f2e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab1-alb-675676675.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:797923187401:loadbalancer/app/lab1-alb/f534fe36ced76f2e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab1-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0e200048e20c77075"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0608c4803e17c5fb4"
              },
              {
                "subnet_id": "subnet-0c38fa1e1c4baf918"
              }
            ],
            "subnets": [
              "subnet-0608c4803e17c5fb4",
              "subnet-0c38fa1e1c4baf918"
            ],
            "tags": {
              "Name": "lab1-alb"
            },
            "tags_all": {
              "Name": "lab1-alb"
            },
            "vpc_id": "vpc-0ccb77312cb26b790",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.lab1_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab1_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:797923187401:listener/app/lab1-alb/f534fe36ced76f2e/c3ab5deb033117e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:797923187401:targetgroup/lab1-target-group/84d8953b039fde11",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:797923187401:listener/app/lab1-alb/f534fe36ced76f2e/c3ab5deb033117e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:797923187401:loadbalancer/app/lab1-alb/f534fe36ced76f2e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab1_alb",
            "aws_lb_target_group.lab1_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.lab1_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab1_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:797923187401:targetgroup/lab1-target-group/84d8953b039fde11",
            "arn_suffix": "targetgroup/lab1-target-group/84d8953b039fde11",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:797923187401:targetgroup/lab1-target-group/84d8953b039fde11",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:797923187401:loadbalancer/app/lab1-alb/f534fe36ced76f2e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab1-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-target-group"
            },
            "tags_all": {
              "Name": "lab1-target-group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ccb77312cb26b790"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797923187401:route-table/rtb-094006a103c4e4591",
            "id": "rtb-094006a103c4e4591",
            "owner_id": "797923187401",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045db3e13f4b17590",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab1-public-rt"
            },
            "tags_all": {
              "Name": "lab1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccb77312cb26b790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab1_igw",
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf6620d73e898372",
            "region": "us-east-2",
            "route_table_id": "rtb-094006a103c4e4591",
            "subnet_id": "subnet-0608c4803e17c5fb4"
          },
          "dependencies": [
            "aws_internet_gateway.lab1_igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.lab1_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be9de7c900e32895",
            "region": "us-east-2",
            "route_table_id": "rtb-094006a103c4e4591",
            "subnet_id": "subnet-0c38fa1e1c4baf918"
          },
          "dependencies": [
            "aws_internet_gateway.lab1_igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.lab1_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797923187401:security-group/sg-0e200048e20c77075",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e200048e20c77075",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab1-alb-sg",
            "name_prefix": "",
            "owner_id": "797923187401",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-alb-sg"
            },
            "tags_all": {
              "Name": "lab1-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccb77312cb26b790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab1_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797923187401:security-group/sg-0009b8a3a03c090d9",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0009b8a3a03c090d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e200048e20c77075"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab1-instance-sg",
            "name_prefix": "",
            "owner_id": "797923187401",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-instance-sg"
            },
            "tags_all": {
              "Name": "lab1-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccb77312cb26b790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.lab1_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797923187401:subnet/subnet-0608c4803e17c5fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0608c4803e17c5fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797923187401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "lab1-public-subnet-1"
            },
            "tags_all": {
              "Name": "lab1-public-subnet-1"
            },
            "vpc_id": "vpc-0ccb77312cb26b790"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797923187401:subnet/subnet-0c38fa1e1c4baf918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c38fa1e1c4baf918",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797923187401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "lab1-public-subnet-2"
            },
            "tags_all": {
              "Name": "lab1-public-subnet-2"
            },
            "vpc_id": "vpc-0ccb77312cb26b790"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:797923187401:vpc/vpc-0ccb77312cb26b790",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-08c99e5694a04a8fe",
            "default_route_table_id": "rtb-0065030aeaf8c5c55",
            "default_security_group_id": "sg-0f4ae55637164444e",
            "dhcp_options_id": "dopt-055b23979c000dde8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccb77312cb26b790",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0065030aeaf8c5c55",
            "owner_id": "797923187401",
            "region": "us-east-2",
            "tags": {
              "Name": "lab1-vpc"
            },
            "tags_all": {
              "Name": "lab1-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}